# PhoneBook

./: CMakeLists.txt  contact.cpp  contact.hpp  gentomb.h  gtest_lite.h  main.cpp  memtrace.cpp  memtrace.h  menu.cpp  menu.hpp  name.cpp  name.hpp  phonebook.cpp  phonebook.hpp  string5.cpp  string5.h  telefonkonyv.h
